added portfolio section

--- a/index.html
+++ b/index.html
@@ -44,20 +44,35 @@
     </section>
     <section id="portfolio">
         <div class="portfolio-text">
-            <h1><span>LASTET</span>WORKING PROJECT</h1>
+            <h1><span>LASTET</span> WORKING PROJECT</h1>
         </div>
         <div class="work-item">
             <div class="single-item">
-                <div class="single-item-img"></div>
-                <div class="single-item-text"></div>
+                <div class="single-item-img">
+                    <img src="images/image 4.png" alt="">
+                </div>
+                <div class="single-item-text">
+                    <h5>Power-x-gym (gym website)</h5>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
             </div>
             <div class="single-item">
-                <div class="single-item-img"></div>
-                <div class="single-item-text"></div>
+                <div class="single-item-img">
+                    <img src="images/image 5.png" alt="">
+                </div>
+                <div class="single-item-text">
+                    <h5>Creative Agency</h5>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
             </div>
             <div class="single-item">
-                <div class="single-item-img"></div>
-                <div class="single-item-text"></div>
+                <div class="single-item-img">
+                    <img src="images/image 8.png" alt="">
+                </div>
+                <div class="single-item-text">
+                    <h5>Hard Rock Music</h5>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
             </div>
         </div>
     </section>
