lets chat section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,13 @@
     </section>
     <section id="lets-chat">
         <div class="work-inquiry">
+            <div class="work-content">
+                <h1>Work Inquiry</h1>
+            </div>
+            <div class="work-btn">
+                <button class="chat-btn"><a href="#"> Lets Chat </a></button>
 
+            </div>
         </div>
     </section>
     <footer>
