--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <div id="website-width">
+   <div>
     <header id="nav-manu">
         <div class="header-manu">
-
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Work</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
         </div>
     </header>
     <section id="profile">
@@ -88,8 +93,15 @@
         </div>
     </section>
     <footer>
-        <div class="conect-us"></div>
-        <div class="icon-section"></div>
+        <div class="contect-us">
+            <h3>Stay connected</h3>
+            <h4>hello@design.com</h4>
+        </div>
+        <div class="icon-section">
+           <a href="#"> <img src="images/image 7.png" alt=""></a>
+           <a href="#"><img src="images/image 6.png" alt=""></a>
+           <a href="#"><img src="images/Group 33059.png" alt=""></a>
+        </div>
     </footer>
    </div>
 </body>
