--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@
    <div>
     <header id="nav-manu">
         <div class="header-manu">
-            <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Work</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
+            <div class="left-icon">
+                <h2><span>MURAD'S PORTFOLIO</span></h2>
+            </div>
+            <div class="right-manu">
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Work</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
         </div>
     </header>
     <section id="profile">
