skill section added

--- a/index.html
+++ b/index.html
@@ -86,6 +86,61 @@
             </div>
         </div>
     </section>
+    <section id="skill-section">
+        <div class="skill-titel">
+            <h1>My Skills</h1>
+            <div class="skill-box">
+                <div class="single-skillbox">
+                    <div class="fornt-img">
+                        <img src="images/download-removebg-preview.png" alt="">
+                    </div>
+                    <div class="fornt-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis doloribus illo vero voluptatem excepturi eveniet!</p>
+                    </div>
+                </div>
+                <div class="single-skillbox">
+                    <div class="fornt-img">
+                        <img src="images/css3-removebg-preview.png" alt="">
+                    </div>
+                    <div class="fornt-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis doloribus illo vero voluptatem excepturi eveniet!</p>
+                    </div>
+                </div>
+                <div class="single-skillbox">
+                    <div class="fornt-img">
+                        <img src="images/bootstrap_logo-removebg-preview.png" alt="">
+                    </div>
+                    <div class="fornt-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis doloribus illo vero voluptatem excepturi eveniet!</p>
+                    </div>
+                </div>
+                <div class="single-skillbox">
+                    <div class="fornt-img">
+                        <img src="images/javascript-icon-8-removebg-preview.png" alt="">
+                    </div>
+                    <div class="fornt-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis doloribus illo vero voluptatem excepturi eveniet!</p>
+                    </div>
+                </div>
+                <div class="single-skillbox">
+                    <div class="fornt-img">
+                        <img src="images/vuejs-logo-stickers-removebg-preview.png" alt="">
+                    </div>
+                    <div class="fornt-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis doloribus illo vero voluptatem excepturi eveniet!</p>
+                    </div>
+                </div>
+                <div class="single-skillbox">
+                    <div class="fornt-img">
+                        <img src="images/mongodb-tutorial-removebg-preview.png" alt="">
+                    </div>
+                    <div class="fornt-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis doloribus illo vero voluptatem excepturi eveniet!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="lets-chat">
         <div class="work-inquiry">
             <div class="work-content">
